# awaq-agents

./: .gitignore  README.md  ingest_pdf.py  pyproject.toml  run_eval.py  run_interactive.py
framework/: agent_runner.py  documents.py  embeddings.py  logging.py
nbs/: 01_pdf_ingest.ipynb  02_docling_examples.ipynb  03_simple_rag.ipynb  04_ragatouille.ipynb  05_ragatouille_simple.ipynb  06_jina_late_chunking copy.ipynb  0__TEMPLATE.ipynb
nbs/scratch/: late_embeds.npz  sample_doc-table-1.csv  sample_doc-table-2.csv  sample_doc-table-3.csv  sample_doc-table-4.csv  sample_doc-table-5.csv  sample_doc-table-6.csv  sample_doc-with-image-refs.md
profiles/: base_profile.py
project_references/: Architecture-Design.md  AwaQ_PDF_Agent_Plan.md  AwaQ_PDF_Agent_Plan_FINAL.md  AwaQ_PDF_Agent_Plan_Full.md  AwaQ_Simple_PDF_Plan.md  PDF_Agent_Initial_Plan.md  PRD-v1.0.md  PROJECT_DESCRIPTION.md  cck_agents_framework_guide.py  prompts_database.md
ui/: main.py
ui/database/: chat.db  chat.db-shm  chat.db-wal  db.py  files.db
ui/results/: interactive_example_agent_v0_04bc44e7.jsonl  interactive_example_agent_v0_04d9239f.jsonl  interactive_example_agent_v0_0fd4b5da.jsonl  interactive_example_agent_v0_17443290.jsonl  interactive_example_agent_v0_1b0569b4.jsonl  interactive_example_agent_v0_1b48da7c.jsonl  interactive_example_agent_v0_2552dca9.jsonl  interactive_example_agent_v0_27ddd3af.jsonl  interactive_example_agent_v0_32363499.jsonl  interactive_example_agent_v0_3e20630b.jsonl  interactive_example_agent_v0_3e58732e.jsonl  interactive_example_agent_v0_44b38165.jsonl  interactive_example_agent_v0_46d9f25f.jsonl  interactive_example_agent_v0_537259ba.jsonl  interactive_example_agent_v0_54c7eb2e.jsonl  interactive_example_agent_v0_5c8b3f4d.jsonl  interactive_example_agent_v0_62607d0a.jsonl  interactive_example_agent_v0_68755b3c.jsonl  (+43 more)
(+55 files in other folders)
