[project]
name = "cck-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.0",
    "claudette>=0.1.4",
    "docling>=2.28.4",
    "fastcore>=1.8.0",
    "ipykernel>=6.29.5",
    "langchain-text-splitters>=0.3.8",
    "nbdev>=2.3.37",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.0.2",
]

[tool.uv.sources]
claudette = { git = "https://github.com/KronResearch/claudette.git" }
